--- a/cabecalho.css
+++ b/cabecalho.css
@@ -2,7 +2,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-header{
+.cab{
     background-color: rgb(49, 49, 49);
     color: white;
     display: flex;
@@ -11,31 +11,31 @@ header{
     position: fixed;
 }
 
-nav{
-    display: flex;
-    align-items: center;
-}
-
-ul{
+nav {
+    background-color: #333;
+    height: 50px;
+  }
+  
+  nav ul {
     display: flex;
     list-style: none;
     margin: 0;
     padding: 0;
-    
-}
-
-li{
-    margin: 0 74px;
-    position: relative;
-}
-
-a{
-    color: white;
+  }
+  
+  nav ul li {
+    margin: 0 50px;
+  }
+  
+  nav ul li a {
+    display: block;
+    color: #fdfdfc;
+    font-size: 16px;
+    padding: 15px 20px;
     text-decoration: none;
-    transition: color 0.2s ease;
-}
-
-a:hover{
-    color: orange;
-}
-
+    transition: background-color 0.3s ease;
+  }
+  
+  nav ul li a:hover {
+    background-color: #f85d03;
+  }
