--- a/public/stylesheets/cabecalho.css
+++ b/public/stylesheets/cabecalho.css
@@ -5,7 +5,7 @@
 }
 
 header {
-  background-color: rgba(42, 41, 43, 0.9);
+  background-color: rgb(42, 41, 43);
   box-shadow: 0px 0px 10px rgb(42, 41, 43);
   height: 70px;
 
@@ -52,7 +52,7 @@ header {
 }
 
 .cab{
-    background-color: rgb(49, 49, 49);
+    background-color: rgba(42, 41, 43, 0.9);
     color: white;
     display: flex;
     justify-content: space-between;
@@ -79,7 +79,7 @@ nav {
   
   nav ul li a {
     display: inline-flex;
-    color: #fdfdfc;
+    color: grey;
     font-size: 15px;
     padding: 10px 20px;
     text-decoration: none;
@@ -87,5 +87,6 @@ nav {
   }
   
   nav ul li a:hover {
+    color: rgb(19, 19, 19);
     background-color: #f85d03;
   }
