--- a/public/stylesheets/barrapesquisa.css
+++ b/public/stylesheets/barrapesquisa.css
@@ -1,16 +1,16 @@
+
 .search-box {
    top: 26px;
-   left: 440px;
+   left: 420px;
    transform: translate(50%, 50%, 50%);
    background: #363636;
-   height: 40px;
+   height: 32px;
    border-radius: 40px;
    padding: 6px;
 
 }
 
 .search-box:hover>input {
-
    width: 500px;
    padding: 0 10px;
 }
@@ -33,15 +33,16 @@ input {
    background: none;
    font-size: 1.1rem;
    transition: 0.5s ease;
-   line-height: 40px;
+   line-height: 32px;
    color: #fff;
 }
 
 .icon {
    color: #ff5e00;
+   right: 20px;
    float: right;
-   width: 40px;
-   height: 40px;
+   width: 32px;
+   height: 32px;
    font-size: 1.3rem;
    border-radius: 50%;
    background: #585858;
