--- a/public/stylesheets/cabecalho.css
+++ b/public/stylesheets/cabecalho.css
@@ -8,7 +8,6 @@ header {
   background-color: rgb(42, 41, 43);
   box-shadow: 0px 0px 10px rgb(42, 41, 43);
   height: 70px;
-
   top: 0;
   left: 0;
   right: 0;
@@ -24,6 +23,9 @@ header {
   justify-content: space-between;
   height: 100%;
 }
+.logo{
+  width: 280px;
+}
 
 .logo img {
   margin-left: 20px;
@@ -31,22 +33,38 @@ header {
 }
 
 .user a {
-  color: #ff7300;
   font-weight: bold;
   margin-left: 20px;
+  justify-content: flex-end;
+
 }
 
-.botaoentrar{
+.botao{
   border: none;
-  color: grey;
-  background-color: grey;
-  padding: 6px 29px;
+  border-radius: 18px;
+  color: rgb(158, 158, 158);
+  background: #363636;
+  padding: 9px 29px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  transition-duration: 0.2s;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  
+}
+.botao:hover{
+  border: none;
+  border-radius: 18px;
+  color:  #080808;
+  background: #f85d03;
+  padding: 9px 29px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   margin: 4px 2px;
-  transition-duration: 0.4s;
   cursor: pointer;
   
 }
