--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -91,7 +91,7 @@
     <header class="main">
         <div class="containermenu">
             <div class="logo">
-                <a href="#"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
+                <a href="/"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
             </div>
             <div class="search-box">
                 <input type="text" placeholder="Pesquisar">
@@ -104,9 +104,9 @@
 
 
             <div class="user">
-                <a href="Login-bookgear.html">
+                <a href="/Login">
                     <button type="url" class="botao">Entrar</button></a>
-                <a class="login" href="#">
+                <a class="login" href="/Cadastro">
                     <button type="url" class="botao">Cadastrar</button></a>
             </div>
         </div>
