--- a/views/Login-bookgear.html
+++ b/views/Login-bookgear.html
@@ -5,15 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="stylesheets/barrapesquisa.css">
-    <link rel="stylesheet" type="text/css" href="stylesheets/cabecalho.css">
+    <link rel="stylesheet" type="text/css" href="../public/stylesheets/cabecalho.css">
+    <link rel="stylesheet" type="text/css" href="../public/stylesheets/barrapesquisa.css">
+    <link rel="stylesheet" type="text/css" href="../public/stylesheets/scrollbar.css">
     <link rel="icon" type="image/x-icon" href="images/logo-removebg-preview.png">
     <title>Login - Bookgear</title>
 
     <style>
         body {
         background-color: rgb(66, 66, 66);
-        background-image: url(images/background2.jpg);
+        background-image: url(../public/images/background2.jpg);
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
@@ -94,7 +95,7 @@
 
         <div class="containermenu">
             <div class="logo">
-                <a href="/"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
+                <a href="/"><img class="logotipo" src="../public/images/Capturar-removebg-preview.png" alt="bookgear"></a>
             </div>
             <div class="search-box">
                 <input type="text" placeholder="Pesquisar">
