Roteamento re-atulizado e detalhes no login e cadastro

--- a/views/Login-bookgear.html
+++ b/views/Login-bookgear.html
@@ -5,32 +5,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/cabecalho.css">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/barrapesquisa.css">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/scrollbar.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/cabecalho.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/barrapesquisa.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/scrollbar.css">
     <link rel="icon" type="image/x-icon" href="images/logo-removebg-preview.png">
     <title>Login - Bookgear</title>
 
     <style>
         body {
         background-color: rgb(66, 66, 66);
-        background-image: url(../public/images/background2.jpg);
+        background-image: url(../images/background2.jpg);
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
-        margin-right: 5px;
     }
 
         .texto {
             color: white;
             width: 35px;
             height: 10%;
-            margin-top: 160px;
+            margin-top: 120px;
         }
 
         .box {
             flex-direction: column;
-            margin: 38px 0px 0px 36%;
+            margin: 38px 0px 0px 475px;
             width: 400px;
             height: 500px;
             text-align: center;
@@ -41,7 +40,7 @@
         .Login {
             color: #ff7300;
             font: bold 30px sans-serif;
-            margin-left: 160px;
+            margin-left: 155px;
         }
 
         .btn-username {
@@ -51,7 +50,7 @@
             height: 30px;
             width: 260px;
             margin-top: 20px;
-            text-align: center;
+            text-align: left;
         }
 
         .forgot-password a:link , .forgot-password a:visited, .forgot-password {
@@ -95,7 +94,7 @@
 
         <div class="containermenu">
             <div class="logo">
-                <a href="/"><img class="logotipo" src="../public/images/Capturar-removebg-preview.png" alt="bookgear"></a>
+                <a href="/"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
             </div>
             <div class="search-box">
                 <input type="text" placeholder="Pesquisar">
@@ -140,8 +139,7 @@
             </form>    
             <div>
                 <input style="margin-top: 20px;" type="checkbox" name="connected" id="c">
-                <label for="c" style="color: white; font-family: Arial, Helvetica, sans-serif;">Continuar
-                    Conectado</label>
+                <label for="c" style="color: white; font-family: Arial, Helvetica, sans-serif;">Continuar Conectado</label>
             </div>
 
             <div class="mini-box">
