--- a/views/Tela-principal_BookGear.html
+++ b/views/Tela-principal_BookGear.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/cabecalho.css">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/barrapesquisa.css">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/scrollbar.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/cabecalho.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/barrapesquisa.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/scrollbar.css">
     <link rel="icon" type="image/x-icon" href="images/logo-removebg-preview.png">
     <title>Bookgear</title>
 </head>
@@ -176,7 +176,7 @@
 
         <div class="containermenu">
             <div class="logo">
-                <a href="/"><img class="logotipo" src="../public/images/Capturar-removebg-preview.png" alt="bookgear"></a>
+                <a href="/"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
             </div>
             <div class="search-box">
                 <input type="text" placeholder="Pesquisar">
@@ -212,37 +212,37 @@
 
     <div class="meio">
         <div class="banners_meio">
-            <img class="banner1 banner" src="../public/images/banner1.png" alt="banner">
-            <img class="banner2 banner" src="../public/images/banner1.png" alt="banner">
+            <img class="banner1 banner" src="../images/banner1.png" alt="banner">
+            <img class="banner2 banner" src="../images/banner1.png" alt="banner">
         </div>
         <div class="container principal">
             <div class="item item1">
                 <!-- Campo onde ficam os produtos -->
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <p class="descrição">Caixa da BookGear Lorem ipsum dolor sit amet consectetura</p>
             </div>
             <div class="item item2">
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <p class="descrição">Caixa da BookGear</p>
             </div>
             <div class="item item3">
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <p class="descrição">Caixa da BookGear</p>
             </div>
             <div class="item item4">
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <p class="descrição">Caixa da BookGear</p>
             </div>
             <div class="item item5">
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <p class="descrição">Caixa da BookGear</p>
             </div>
             <div class="item item6">
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <p class="descrição">Caixa da BookGear</p>
             </div>
             <div class="item item7">
-                <img class="imgbox" src="../public/images/box.jpg">
+                <img class="imgbox" src="../images/box.jpg">
                 <p class="descrição">Caixa da BookGear</p>
             </div>
 
