--- a/views/cadastro.html
+++ b/views/cadastro.html
@@ -5,19 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/cabecalho.css">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/barrapesquisa.css">
-    <link rel="stylesheet" type="text/css" href="../public/stylesheets/scrollbar.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/cabecalho.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/barrapesquisa.css">
+    <link rel="stylesheet" type="text/css" href="../stylesheets/scrollbar.css">
     <link rel="icon" type="image/x-icon" href="images/logo-removebg-preview.png">
     <title>Cadastro - Bookgear</title>
     <style>
         body {
             background-color: rgb(66, 66, 66);
-            background-image: url(../public/images/background2.jpg);
+            background-image: url(../images/background2.jpg);
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
-            margin-right: 5px;
         }
 
         .texto {
@@ -52,13 +51,6 @@
             margin-top: 20px;
             text-align: left;
         }
-
-        .forgot-password {
-            margin-top: 20px;
-            color: #ff7300;
-            font: bold 17px sans-serif;
-        }
-
         .mini-box {
             display: inline-flex;
             flex-direction: row;
@@ -85,6 +77,12 @@
         .mini-box a:active {
             background-color: #d15e00;
         }
+
+        .forgot-password a:link , .forgot-password a:visited, .forgot-password {
+            margin-top: 20px;
+            color: #ff7300;
+            font: bold 17px sans-serif;
+        }
     </style>
 </head>
 
@@ -92,7 +90,7 @@
     <header class="main">
         <div class="containermenu">
             <div class="logo">
-                <a href="/"><img class="logotipo" src="../public/images/Capturar-removebg-preview.png" alt="bookgear"></a>
+                <a href="/"><img class="logotipo" src="../images/Capturar-removebg-preview.png" alt="bookgear"></a>
             </div>
             <div class="search-box">
                 <input type="text" placeholder="Pesquisar">
@@ -139,6 +137,10 @@
 
             <div class="mini-box">
                 <a href="#">Cadastrar</a>
+            </div>
+
+            <div>
+                <p class="forgot-password">Já tem conta? <a href="/Login">Entrar</a></p>
             </div>
         </div>
     </div>
