--- a/views/Tela-principal_BookGear.html
+++ b/views/Tela-principal_BookGear.html
@@ -14,7 +14,7 @@
 <style>
     body {
         background-color: rgb(66, 66, 66);
-        background-image: url(../public/images/background2.jpg);
+        background-image: url(../images/background2.jpg);
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
